--- a/main.css
+++ b/main.css
@@ -2,86 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* custom css */
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
-/* code pen snippet */
-
-:root {
-  --form-control-color: rebeccapurple;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-}
-
-.form-control {
-  font-family: system-ui, sans-serif;
-  font-size: 2rem;
-  font-weight: bold;
-  line-height: 1.1;
-  /* display: grid;
-  grid-template-columns: 1em auto;
-  gap: 0.5em; */
-}
-
-.form-control:focus {
-  color: var(--form-control-color);
-}
-
-input[type="radio"] {
-  /* Add if not using autoprefixer */
-  -webkit-appearance: none;
-  /* Remove most all native input styles */
-  appearance: none;
-  /* For iOS < 15 */
-  background-color: rgb(77, 77, 77);
-  /* Not removed via appearance */
-  margin: 0;
-
-  font: inherit;
-  /* color: hsl(228, 45%, 44%); */
-  width: 1.15em;
-  height: 1.15em;
-  /* border: 0.15em solid currentColor; */
-  border-radius: 50%;
-  transform: translateY(-0.075em);
-
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-input[type="radio"]::before {
-  content: "";
-  width: 0.65em;
-  height: 0.65em;
-  border-radius: 50%;
-  transform: scale(0);
-  transition: 50ms transform ease-in-out;
-  box-shadow: inset 1em 1em hsl(217, 49%, 33%);
-  /* Windows High Contrast Mode */
-  background-color: CanvasText;
-}
-
-input[type="radio"]:checked::before {
-  transform: scale(1.8);
-}
-
-input[type="radio"]:focus {
-  outline: max(2px, 0.15em) solid currentColor;
-  outline-offset: max(2px, 0.15em);
+@layer components {
+  .radio-btn {
+    @apply w-10 h-10 bg-veryDarkBlue rounded-full hover:bg-orange focus:bg-lightGrey;
+  }
 }
